# GedTool

./: .gitignore  pyproject.toml  requirements.txt
source/package/string/core/: config.py  is_empty_string.py  is_string.py
tests/: pytest_is_empty_string_1781377240.py  pytest_is_string_1781376158.py
