[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gedtool"
version = "0.0.0"
description = "Tools for working with GED data"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "GedCom" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["source"]
