[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gedtool"
version = "0.0.0"
description = "Tools for developing with Python faster"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "GedCom" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest >= 8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["source"]
